# asspr

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.old  README  README.md  THANKS  TODO  asspr  asspr.8  asspr.c  configure.ac  sonar-project.properties
cmake/: FindCheck.cmake
include/: asspr.h  version.h
src/: Makefile.am  asspr.c  asspr.h  config.h.in  main.c
tests/: asspr-test.c  run-tests.sh
tests/etc/assp/: localaddresses.txt  localdomains.txt
